draw home popup completed

--- a/apps/renovation/src/app/shared/layouts/footer/footer.component.html
+++ b/apps/renovation/src/app/shared/layouts/footer/footer.component.html
@@ -65,7 +65,7 @@
     <div class="social-and-legal" style="background-color: #37517e;">
         <div class="container">
             <p  id="footer" class="container footer-bottom clearfix">
-                <span>© 2008-2020 MyBuilder Limited </span>
+                <span>© 2020 TVS Renovation | </span>
                 <span class="jslink" title="Read the Terms and condition of using MyBuilder" data-jslink="/terms-of-use">Terms and conditions </span>
                 <span class="jslink" data-jslink="/privacy-notice">Privacy notice </span>
                 <span class="jslink" data-jslink="/cookie-list">Cookies </span>
