--- a/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.html
+++ b/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.html
@@ -1,3 +1,6 @@
+<style>
+
+    </style>
 <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
         <h1 class="logo mr-auto">
@@ -8,7 +11,7 @@
         <nav class="nav-menu d-none d-lg-block">
             <ul>
                 <li class="active"><a href="index.html">Advice Center</a></li>
-                <li><a href="#about">Design Your Home</a></li>
+                <li><a class="chaildnev"><tvs-draw-home [master]="master"></tvs-draw-home></a></li>
                 <li><a href="#services">Search Tradesman</a></li>
                 <li><a href="#portfolio">Join with us</a></li>
             </ul>
