--- a/apps/renovation/src/styles.scss
+++ b/apps/renovation/src/styles.scss
@@ -14,3 +14,7 @@
 // @import './assets/vendors/camera-slider/camera.css';
 // @import './assets/vendors/owl_carousel/owl.carousel.css';
 // @import './assets/css/style.css';
+
+@import '~bootstrap/dist/css/bootstrap.css';
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
