stable user interface

--- a/apps/renovation/src/app/app.component.html
+++ b/apps/renovation/src/app/app.component.html
@@ -1,6 +1,9 @@
 
-<tvs-nav-bar></tvs-nav-bar>
+<tvs-home></tvs-home>
+
+<!-- <router-outlet></router-outlet> -->
+<!-- <tvs-nav-bar></tvs-nav-bar>
 
 <tvs-slider></tvs-slider>
 
-<tvs-footer></tvs-footer>
+<tvs-footer></tvs-footer> -->
