--- a/apps/renovation/src/app/shared/layouts/front-blocks/slider.component.html
+++ b/apps/renovation/src/app/shared/layouts/front-blocks/slider.component.html
@@ -21,13 +21,66 @@
               </div>
           </div>
       </div>
-      <tvs-front-blocks></tvs-front-blocks>
+      <div class="row" style="margin-top: 45px;">
+          <div class="col-lg-3 d-flex flex-column justify-content-center 
+              pt-4 pt-lg-0 order-2 order-lg-1"
+              data-aos="fade-up" data-aos-delay="200">
+              <tvs-front-blocks></tvs-front-blocks>
+          </div>
+          <div class="col-lg-3 d-flex flex-column justify-content-center 
+              pt-4 pt-lg-0 order-2 order-lg-1"
+              data-aos="fade-up" data-aos-delay="200">
+              <tvs-front-blocks></tvs-front-blocks>
+          </div>
+          <div class="col-lg-3 d-flex flex-column justify-content-center 
+              pt-4 pt-lg-0 order-2 order-lg-1"
+              data-aos="fade-up" data-aos-delay="200">
+              <tvs-front-blocks></tvs-front-blocks>
+          </div>
+          <div class="col-lg-3 d-flex flex-column justify-content-center 
+              pt-4 pt-lg-0 order-2 order-lg-1"
+              data-aos="fade-up" data-aos-delay="200">
+              <tvs-front-blocks></tvs-front-blocks>
+          </div>
+      </div>
       <div class="d-lg-flex" style="margin-top: 45px;">
         <a href="#about" class="btn-get-started scrollto">Post a job</a>
         <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video"
             data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
     </div>
   </div>
+
+</section>
+
+<section style="padding-bottom: 15px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card bg-dark text-white noborder smallcardheight">
+                    <img class="card-img-top smallcardimageheight" 
+                    src="../../../../assets/images/plan2.jpg" alt="Card image cap">
+                    <div class="card-img-overlay d-flex flex-column">
+                        <!-- <h4 class="card-title"><a>Card title</a></h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                            content.</p> -->
+                        <a style="width:170px;float: right;margin-top: auto;" href="#" class="btn btn-info">Read Insider Tips</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card bg-dark text-white noborder smallcardheight">
+                    <img class="card-img-top smallcardimageheight" 
+                    src="../../../../assets/images/feedback2.jpg" alt="Card image cap">
+                    <div class="card-img-overlay d-flex flex-column">
+                        <!-- <h4 class="card-title"><a>Card title</a></h4> width: 170px;margin-top: auto;
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                            content.</p> -->
+                            <a style="width:170px;float: right;margin-top: auto;" href="#" class="btn btn-danger">Review Tradesman</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </section>
 
@@ -43,34 +96,11 @@
                       <a class="btn btn-success">
                           <tvs-draw-home [master]="master"></tvs-draw-home>
                       </a>
+                      <!-- <a class="btn btn-success"><tvs-draw-home></tvs-draw-home></a> -->
+                      
+                      
                     </div>
                   </div>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<section style="padding-bottom: 15px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card bg-dark text-white noborder smallcardheight">
-                    <img class="card-img-top smallcardimageheight" 
-                    src="../../../../assets/images/plan2.jpg" alt="Card image cap">
-                    <div class="card-img-overlay d-flex flex-column">
-                        <a style="width:170px;float: right;margin-top: auto;" href="#" class="btn btn-info">Read Insider Tips</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card bg-dark text-white noborder smallcardheight">
-                    <img class="card-img-top smallcardimageheight" 
-                    src="../../../../assets/images/feedback2.jpg" alt="Card image cap">
-                    <div class="card-img-overlay d-flex flex-column">
-                            <a style="width:170px;float: right;margin-top: auto;" href="#" class="btn btn-danger">Review Tradesman</a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
