--- a/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.scss
+++ b/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.scss
@@ -1,3 +1,14 @@
+.noborder{
+    border: none;
+}
+.smallcardheight{
+    height: 250px;
+}
+
+.smallcardimageheight{
+    height: 100%;
+}
+
 .chaildnev{
     display: block;
     position: relative;
