added advice center blobe

--- a/apps/renovation/src/app/shared/layouts/home/home.component.html
+++ b/apps/renovation/src/app/shared/layouts/home/home.component.html
@@ -1,8 +1,7 @@
-<!-- <p>home works!</p> -->
 
 <tvs-nav-bar></tvs-nav-bar> 
 
-<tvs-slider></tvs-slider>
 
-<!-- <tvs-footer></tvs-footer> -->
+
+<tvs-footer></tvs-footer>
 
