--- a/apps/renovation/src/app/shared/layouts/slider/slider.component.html
+++ b/apps/renovation/src/app/shared/layouts/slider/slider.component.html
@@ -23,7 +23,7 @@
       </div>
       <tvs-front-blocks></tvs-front-blocks>
       <div class="d-lg-flex" style="margin-top: 45px;">
-        <a href="#about" class="btn-get-started scrollto">Post a job</a>
+        <!-- <a href="#about" class="btn-get-started scrollto">Post a job</a> -->
         <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video"
             data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
     </div>
