--- a/apps/renovation/src/assets/css/style.css
+++ b/apps/renovation/src/assets/css/style.css
@@ -382,6 +382,12 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#navbar {
+  width: 100%;
+  height: 70px;
+  background: #37517e;
+}
+
 #hero {
   width: 100%;
   height: 100vh;
